<resources>
    <string name="app_name">Remember</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--自定义常量-->
    <string name="email">邮箱</string>
    <string name="password">密码（6—12位字符）</string>
    <string name="sign_in_short">登陆</string>
    <string name="sign_in_long">已有账号了？点击登陆</string>
    <string name="register_long">新用户？点击这里注册</string>
    <string name="register_short">注册</string>
    <string name="name">昵称(3—6位)</string>
    <string name="forget_password">忘记密码？</string>
    <string name="get_password">找回密码</string>
    <string name="done_day">打卡天数</string>
    <string name="num_new">新词数</string>
    <string name="num_today">今日单词</string>
    <string name="num_remain">剩余单词</string>
    <string name="num_mine">我的单词 ></string>
    <string name="begin_study">开始学习</string>
    <string name="next">下一个</string>
    <string name="detail">单词信息</string>
    <string name="know">认识</string>
    <string name="unknow">不认识</string>
    <string name="search">搜索</string>
    <string name="delete">删除</string>
    <string name="self_test">自测模式</string>
    <string name="diary_text_shorty"> 天打卡</string>
    <string name="all_diary">全部日记</string>
    <string name="register_diary">打卡日记</string>
    <string name="my_book">我的图书</string>
    <string name="all_books">书库</string>
    <string name="message">消息</string>
    <string name="input">请输入文本</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="day">天</string>
    <string name="new_name">新昵称</string>
    <string name="change_name">修改昵称</string>
    <string name="new_friend">添加朋友</string>

</resources>
