<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunus.remember.activity.begin.LoginActivity">

    <include
        layout="@layout/begin_toolbar"
        android:id="@+id/login_toolbar"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:background="@drawable/begin_input_shape">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_portrait"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@color/black" />




            <EditText
                android:id="@+id/login_email"
                style="@style/begin_input_style"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/login_password"
                style="@style/begin_input_style"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_login"
        style="@style/begin_button_style"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sign_in_short"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="end"
        android:layout_marginTop="20dp" />

</LinearLayout>

<TextView
    android:id="@+id/login_to_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentBottom="true"
    android:text="@string/register_long"/>


</RelativeLayout >
