<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunus.remember.activity.begin.RegisterActivity">
    <include
        layout="@layout/begin_toolbar"
        android:id="@+id/register_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:background="@drawable/begin_input_shape">

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_portrait"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@color/black" />
            <ImageButton
                android:id="@+id/register_add_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/common_add"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/register_name"
            style="@style/begin_input_style"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/register_email"
            style="@style/begin_input_style"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/register_password"
            style="@style/begin_input_style"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_register"
            style="@style/begin_button_style"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/register_short"
            android:textColor="@color/black" />


    </LinearLayout>

    <TextView
        android:id="@+id/register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in_long"/>

</RelativeLayout>
