<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunus.remember.activity.begin.PasswordActivity">

    <include
        layout="@layout/begin_toolbar"
        android:id="@+id/password_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:background="@drawable/begin_input_shape">

        <EditText
            android:id="@+id/forget_email"
            style="@style/begin_input_style"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />



        <Button
            android:id="@+id/btn_get_password"
            style="@style/begin_button_style"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/get_password"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/password_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/register_long"/>
</RelativeLayout>
